# bot-dashboard

./: .env  Cargo.toml  README.md
src/: main.rs
