[package]
name = "bot-dashboard"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.0"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono"] }
env_logger = "0.10"
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"
actix-cors = "0.7.1"
